fixed email mispelling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<a href="img/cristianFrancoResume.pdf">Resume</a>
 				</div>
 				<div class="tempGridItem">
-					<a href="mailto:cristianfranco@gmail.com">Email</a>
+					<a href="mailto:cristianfranco.cf@gmail.com">Email</a>
 				</div>		
 			</div>
 		</div>
