removed DnD Roller project

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 						<li>Used microcontrollers, Raspberry Pi, and Arduino</li>
 					</ul>
 				</div>
-				<div class="grid-item">
+<!-- 				<div class="grid-item">
 					<h3>DnD Roller</h3>
 					<ul>
 						<li>Developed a cross platform companion application through Qt</li>
 						<li>Minimized dice rolling and referencing manuals</li>
 					</ul>
-				</div>
+				</div> -->
 				<div class="grid-item">
 					<h3>Temperature Reader</h3>
 					<ul>
