Made navbar base

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
 	</head>
 	
 	<body>
+		<div class="navBar">
+			<ul>
+			  <li><a class="active" href="#home">Home</a></li>
+			  <li><a href="#skills">Skills</a></li>
+			  <li><a href="contact.asp">Work Experience</a></li>
+			  <li style="float:right"><a href="about.asp">About</a></li>
+			</ul>
+		</div>
+
+
+
 		<div class="Header">
-			<h1>Cristian Franco</h1>
+			<h1 id="home">Cristian Franco</h1>
 			<div class="tempGrid">
 				<div class="tempGridItem">
 					<a href="https://www.linkedin.com/in/cristian-franco-7a7381161/">LinkedIn</a> 
@@ -29,7 +40,7 @@
 		</div>
 
 		<div class="tanSection">
-			<h2>SKILLS</h2>
+			<h2 id="skills">SKILLS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
 					<h3>TECH</h3>
