Fixed navbar functionality, broke visuals

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 			<ul>
 			  <li><a class="active" href="#home">Home</a></li>
 			  <li><a href="#skills">Skills</a></li>
-			  <li><a href="contact.asp">Work Experience</a></li>
+			  <li><a href="#workExperience">Work Experience</a></li>
+			  <li><a href="#projects">Projects</a></li>
+			  <li><a href="#extracurriculars">Extracurriculars</a></li>
 			  <li style="float:right"><a href="about.asp">About</a></li>
 			</ul>
 		</div>
@@ -39,8 +41,8 @@
 			<p class="bio">I learned Java through a summer program with Thrive Scholars in high school. From then on, I learned the core concepts of Computer Science in C++ at UC Riverside. I learned Python on my own time and used it in several projects. I've done projects in embedded systems for school and for fun.</p>
 		</div>
 
-		<div class="tanSection">
-			<h2 id="skills">SKILLS</h2>
+		<div class="tanSection" id="skills">
+			<h2>SKILLS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
 					<h3>TECH</h3>
@@ -61,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="blackSection">
+		<div class="blackSection" id="workExperience">
 			<h2>WORK EXPERIENCE</h2>
 			<div class="grid-container">
 				<div class="grid-item">
@@ -85,7 +87,7 @@
 			</div>
 		</div>
 
-		<div class="tanSection">
+		<div class="tanSection" id="projects">
 			<h2>PROJECTS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
@@ -132,7 +134,7 @@
 			</div>
 		</div>
 
-		<div class="blackSection">
+		<div class="blackSection" id="extracurriculars">
 			<h2>EXTRACURRICULARS</h2>
 
 			<div class="grid-container">
