Fixed navBar navigation with spans in the headers

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
 			<p class="bio">I learned Java through a summer program with Thrive Scholars in high school. From then on, I learned the core concepts of Computer Science in C++ at UC Riverside. I learned Python on my own time and used it in several projects. I've done projects in embedded systems for school and for fun.</p>
 		</div>
 
-		<div class="tanSection" id="skills">
-			<h2>SKILLS</h2>
+<!-- 			<div class="tanSection" id="skills">
+			<h2>SKILLS</h2> -->
+
+		<div class="tanSection">
+			<h2><span id="skills"></span>SKILLS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
 					<h3>TECH</h3>
@@ -63,8 +66,8 @@
 			</div>
 		</div>
 
-		<div class="blackSection" id="workExperience">
-			<h2>WORK EXPERIENCE</h2>
+		<div class="blackSection">
+			<h2><span id=workExperience></span>WORK EXPERIENCE</h2>
 			<div class="grid-container">
 				<div class="grid-item">
 					<h3>Wellington Management</h3>
@@ -87,8 +90,8 @@
 			</div>
 		</div>
 
-		<div class="tanSection" id="projects">
-			<h2>PROJECTS</h2>
+		<div class="tanSection">
+			<h2><span id="projects"></span>PROJECTS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
 					<h3>Twitter Location Searcher</h3>
@@ -134,8 +137,8 @@
 			</div>
 		</div>
 
-		<div class="blackSection" id="extracurriculars">
-			<h2>EXTRACURRICULARS</h2>
+		<div class="blackSection">
+			<h2><span id="extracurriculars"></span>EXTRACURRICULARS</h2>
 
 			<div class="grid-container">
 				<div class="grid-item">
