Fixed spacing issue between divs, better fix than padding and outlines

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 			  <li><a href="#extracurriculars">Extracurriculars</a></li>
 			  <li style="float:right"><a href="about.asp">About</a></li>
 			</ul>
-		</div>
+		</div><!--
 
-
-
-		<div class="Header">
+	--><div class="Header">
 			<h1 id="home">Cristian Franco</h1>
 			<div class="tempGrid">
 				<div class="tempGridItem">
@@ -32,19 +30,16 @@
 					<a href="mailto:cristianfranco.cf@gmail.com">Email</a>
 				</div>		
 			</div>
-		</div>
+		</div><!--
 
-		<div class="blackSection">
+	--><div class="blackSection">
 			<h2>BIO</h2>
 			<img src="img/cristianFranco.jpg" alt="Cristian Franco" style="width:300px;height:400;">
 			<p class="bio">Welcome! My name is Cristian Franco and I'm a recent new grad from UC Riverside. I majored in Computer Engineering and am interested in working on both front ends and back ends.</p>
 			<p class="bio">I learned Java through a summer program with Thrive Scholars in high school. From then on, I learned the core concepts of Computer Science in C++ at UC Riverside. I learned Python on my own time and used it in several projects. I've done projects in embedded systems for school and for fun.</p>
-		</div>
+		</div><!--
 
-<!-- 			<div class="tanSection" id="skills">
-			<h2>SKILLS</h2> -->
-
-		<div class="tanSection">
+	--><div class="tanSection">
 			<h2><span id="skills"></span>SKILLS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
@@ -64,9 +59,9 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+		</div><!--
 
-		<div class="blackSection">
+	--><div class="blackSection">
 			<h2><span id=workExperience></span>WORK EXPERIENCE</h2>
 			<div class="grid-container">
 				<div class="grid-item">
@@ -88,9 +83,9 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+		</div><!--
 
-		<div class="tanSection">
+	--><div class="tanSection">
 			<h2><span id="projects"></span>PROJECTS</h2>
 			<div class="grid-container">
 				<div class="grid-item">
@@ -135,9 +130,9 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+		</div><!--
 
-		<div class="blackSection">
+	--><div class="blackSection">
 			<h2><span id="extracurriculars"></span>EXTRACURRICULARS</h2>
 
 			<div class="grid-container">
@@ -159,9 +154,9 @@
 						<li>Curriculum included exhaustive schedule that involved Computer Science lab sections</li>
 					</ul>
 				</div>
-			</div>
+			</div><!--
 
-		</div>
+	--></div>
 
 	</body>
 </html>
