Fixed navBar, Home, and About navigations

--- a/index.html
+++ b/index.html
@@ -13,23 +13,12 @@
 			  <li><a href="#workExperience">Work Experience</a></li>
 			  <li><a href="#projects">Projects</a></li>
 			  <li><a href="#extracurriculars">Extracurriculars</a></li>
-			  <li style="float:right"><a href="about.asp">About</a></li>
+			  <li style="float:right"><a href="#contact">Contact</a></li>
 			</ul>
 		</div><!--
 
 	--><div class="Header">
-			<h1 id="home">Cristian Franco</h1>
-			<div class="tempGrid">
-				<div class="tempGridItem">
-					<a href="https://www.linkedin.com/in/cristian-franco-7a7381161/">LinkedIn</a> 
-				</div>
-				<div class="tempGridItem">
-					<a href="img/cristianFrancoResume.pdf">Resume</a>
-				</div>
-				<div class="tempGridItem">
-					<a href="mailto:cristianfranco.cf@gmail.com">Email</a>
-				</div>		
-			</div>
+			<h1><span id="home"></span>Cristian Franco</h1>
 		</div><!--
 
 	--><div class="blackSection">
@@ -154,9 +143,27 @@
 						<li>Curriculum included exhaustive schedule that involved Computer Science lab sections</li>
 					</ul>
 				</div>
-			</div><!--
+			</div>
 
-	--></div>
+		</div><!--
+
+	--><div class="tanSection">
+			<h2><span id="contact"></span>CONTACT</h2>
+			<div class="tempGrid">
+				<div class="tempGridItem">
+					<a href="https://www.linkedin.com/in/cristian-franco-7a7381161/">LinkedIn</a> 
+				</div>
+
+				<div class="tempGridItem">
+					<a href="img/cristianFrancoResume.pdf">Resume</a>
+				</div>
+
+				<div class="tempGridItem">
+					<a href="mailto:cristianfranco.cf@gmail.com">Email</a>
+				</div>		
+			</div>
+
+		</div>
 
 	</body>
 </html>
