Updated LinkedIn url

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<h2><span id="contact"></span>CONTACT</h2>
 			<div class="tempGrid">
 				<div class="tempGridItem">
-					<a href="https://www.linkedin.com/in/cristian-franco-7a7381161/">LinkedIn</a> 
+					<a href="https://www.linkedin.com/in/c-franco/">LinkedIn</a> 
 				</div>
 
 				<div class="tempGridItem">
