Updated summary and details of activities

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 	--><div class="blackSection">
 			<h2>BIO</h2>
 			<img id="headshot" src="img/cristianFranco.jpg" alt="Cristian Franco">
-			<p class="bio">Welcome! My name is Cristian Franco and I'm a recent new grad from UC Riverside. I majored in Computer Engineering and am interested in working on both front ends and back ends.</p>
-			<p class="bio">I learned Java through a summer program with Thrive Scholars in high school. From then on, I learned the core concepts of Computer Science in C++ at UC Riverside. I learned Python on my own time and used it in several projects. I've done projects in embedded systems for school and for fun.</p>
+			<p class="bio">Welcome! I am a recent graduate of University of California, Riverside's Computer Engineering program at the Bourns College of Engineering. Previously, I was a Technology Intern at Wellington Management, where I established a ETL process according to stakeholders needs and created a Business Intelligence Dashboard for quarterly financial data in a small team.</p>
+			<p class="bio">I'm passionate about data processing, pipelines, visualizations, and analysis. I am eager to learn more about the field of data and its various implementations and uses.</p>
+			<p class="bio">I am currently seeking Data Engineering / Analyst opportunities in the Los Angeles area and would love to connect and chat!</p>
 		</div><!--
 
 	--><div class="tanSection">
@@ -39,10 +40,10 @@
 				<div class="grid-item">
 					<h3>TECH</h3>
 					<ul>
-						<li>C++, Python, C, Java</li>
-						<li>HTML, CSS</li>
-						<li> Tableau, Git, BitBucket, Jira, Scrum</li>
-						<li>AWS Athena, S3, EC2
+						<li>Python, SQL, C++, C, Java</li>
+						<li>HTML, CSS, JavaScript</li>
+						<li>Tableau, Pandas Git, BitBucket, Jira, Scrum</li>
+						<li>AWS Athena, S3, Lambda</li>
 					</ul>
 				</div>
 				<div class="grid-item">
@@ -61,19 +62,19 @@
 				<div class="grid-item">
 					<h3>Wellington Management</h3>
 					<ul>
-						<li>Designed the front end in Tableau</li>
-						<li>Created the backend in Python</li>
-						<li>Provided traders with trend in for and insight to increase productivity</li>
-						<li>Led weekly stakeholder meetings and five inter-team meetings</li>
+						<li>Reduced an 8-hour analysis and visualization process down to 5 minutes</li>
+						<li>Established an ETL process and a Business Intelligence (BI) dashboard for quarterly financial data</li>
+						<li>Learned about the finance industry and potential KPI's</li>
+						<li>Led 2 weekly stakeholder meetings and 5 Scrum inter-team meetings</li>
 					</ul>
 				</div>
 				<div class="grid-item">
 					<h3>Thrive Scholars</h3>
 					<ul>
-						<li>Taught class of 19 incoming college freshmen how to code in Java</li>
-						<li>Led the students in labs and provided aid in creating Java programs</li>
-						<li>Collaborated with the professor to develop in daily lesson plans</li>
-						<li>Conducted tests every two weeks and graded student's performance</li>
+						<li>Taught class of 19 college freshmen CS concepts such as conditionals, loops, functions, and data structures</li>
+						<li>Led the students in labs and provided guidance in creating Java programs</li>
+						<li>Collaborated with the professor to develop in daily lesson plans and which concepts to reinforce</li>
+						<li>Assessed students' performance based on lab scores, test scores, questions asked, and overall understanding</li>
 					</ul>
 				</div>
 			</div>
@@ -85,9 +86,9 @@
 				<div class="grid-item">
 					<h3>Twitter Location Searcher</h3>
 					<ul>
-						<li>Developed a tweet searcher based on location</li>
-						<li>Used Twitter API, Angular, Spring, Lucene</li>
-						<li>Used Python, Java, HTML, CSS, Javascript</li>
+						<li>Implemented data scraping, back end, front end, and text search components of a web application</li>
+						<li>Developed a tweet scraper and searcher based on location in a team of 3</li>
+						<li>Utilized Twitter API, Angular, Spring, Lucene</li>
 					</ul>
 				</div>
 				<div class="grid-item">
@@ -103,7 +104,7 @@
 					<ul>
 						<li>C, Python</li>
 						<li>Created a menu system; feeding on a timer; used servos and TFT LCD screen</li>
-						<li>Set and fulfiller sprints based on component availibality and required learning time</li>
+						<li>Set development sprints, created documentation, and performed tests on individual components</li>
 						<li>Used microcontrollers, Raspberry Pi, and Arduino</li>
 					</ul>
 				</div>
@@ -134,18 +135,18 @@
 					<h3>Society of Hispanic Professional Engineers</h3>
 					<h4>Jr. Chapter Representative</h4>
 					<ul>
-						<li>Founded Society chapter at local high school</li>
-						<li>Organized weekly meetings at local high school with volunteers</li>
-						<li>Coordinated outreach events with high school staff and club volunteers</li>
+						<li>Led founding efforts of new Jr. Chapter at locak high school</li>
+						<li>Organized 20 weekly meetings at local high school with volunteers</li>
+						<li>Coordinated 2 large scale outreach events with high school staff and club volunteers</li>
 					</ul>
 				</div>
 				<div class="grid-item">
 					<h3>Thrive Scholars</h3>
 					<h4>Scholar</h4>
 					<ul>
-						<li>Paired with industry mentor to aid in professional development</li>
+						<li>Paired with tech industry mentor to aid in professional and personal development</li>
 						<li>Met with industry mentor on a monthly basis, focusing on professional and personal development (academic planning, goal-setting, public speaking, industry exposure)</li>
-						<li>Curriculum included exhaustive schedule that involved Computer Science lab sections</li>
+						<li>Undertook a 6-week summer curriculum for two summers of academic and professional development</li>
 					</ul>
 				</div>
 			</div>
