--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	--><div class="blackSection">
 			<h2>BIO</h2>
 			<img id="headshot" src="img/cristianFranco.jpg" alt="Cristian Franco">
-			<p class="bio">Welcome! I am a recent graduate of University of California, Riverside's Computer Engineering program at the Bourns College of Engineering. Previously, I was a Technology Intern at Wellington Management, where I established a ETL process according to stakeholders needs and created a Business Intelligence Dashboard for quarterly financial data in a small team.</p>
-			<p class="bio">I'm passionate about data processing, pipelines, visualizations, and analysis. I am eager to learn more about the field of data and its various implementations and uses.</p>
-			<p class="bio">I am currently seeking Data Engineering / Analyst opportunities in the Los Angeles area and would love to connect and chat!</p>
+			<p class="bio">I am a programmer looking for a new Date Engineering role. I graduated from the University of California, Riverside's Computer Engineering program at the Bourns College of Engineering. My previous roles include being a Data Analyst at AmeriHome Mortgage and a Technology Intern at Wellington Management.</p>
+			<p class="bio">I've learned Java, C++, C, and a bit of C# in my college career. I currently work with Python and SQL to ingest and transform data into useful visualizations. In my previous roles, I've used Microsoft Excel and Tabluea for these visualizations.</p>
+			<p class="bio">I'm currently learning about Airflow and implementing Streamlit and MongoDB in a new project I'm developing. I'm passionate about data processing, pipelines, visualizations, and analysis.</p>
 		</div><!--
 
 	--><div class="tanSection">
