--- a/index.html
+++ b/index.html
@@ -1,195 +1,130 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="mystyle.css">
-		 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-   crossorigin=""/>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="src/mystyle.css">
 		<title>Cristian Franco</title>
 	</head>
 	
 	<body>
-
-		
 		<div class="navBar">
 			<ul>
-			  <li><a class="active" href="#home">Home</a></li>
-			  <li><a href="#skills">Skills</a></li>
-			  <li><a href="#workExperience">Work Experience</a></li>
-			  <li><a href="#projects">Projects</a></li>
-			  <li><a href="#extracurriculars">Extracurriculars</a></li>
-			  <li style="float:right"><a href="#contact">Contact</a></li>
+			  <li><a>Cristian Franco</a></li>
+			  <li style="float:right"><a href="img/cristianFrancoResume.pdf">Resume</a></li>
+			  <li style="float:right"><a href="https://github.com/cristian-franco">GitHub</a></li>
+			  <li style="float:right"><a href="https://www.linkedin.com/in/c-franco/">LinkedIn</a></li>
 			</ul>
 		</div><!--
 
-	--><div class="Header">
-			<h1><span id="home"></span>Cristian Franco</h1>
-		</div><!--
-
-	--><div class="blackSection">
-			<h2>BIO</h2>
-			<img id="headshot" src="img/cristianFranco.jpg" alt="Cristian Franco">
-			<p class="bio">I am a programmer looking for a new Date Engineering role. I graduated from the University of California, Riverside's Computer Engineering program at the Bourns College of Engineering. My previous roles include being a Data Analyst at AmeriHome Mortgage and a Technology Intern at Wellington Management.</p>
-			<p class="bio">I've learned Java, C++, C, and a bit of C# in my college career. I currently work with Python and SQL to ingest and transform data into useful visualizations. In my previous roles, I've used Microsoft Excel and Tabluea for these visualizations.</p>
-			<p class="bio">I'm currently learning about Airflow and implementing Streamlit and MongoDB in a new project I'm developing. I'm passionate about data processing, pipelines, visualizations, and analysis.</p>
-		</div><!--
-
-	--><div class="tanSection">
-			<h2><span id="skills"></span>SKILLS</h2>
-			<div class="grid-container">
-				<div class="grid-item">
-					<h3>TECH</h3>
-					<ul>
-						<li>Python, SQL, C++, C, Java</li>
-						<li>HTML, CSS, JavaScript</li>
-						<li>Tableau, Pandas Git, BitBucket, Jira, Scrum</li>
-						<li>AWS Athena, S3, Lambda</li>
-					</ul>
-				</div>
-				<div class="grid-item">
-					<h3>NON-TECH</h3>
-					<ul>
-						<li>Leadership, organization, public speaking</li>
-						<li>Self-starter</li>
-					</ul>
-				</div>
+	-->
+		<div class="gridSection" id="firstSection">
+			<div class="gridItem">
+				<img id="headshot" src="img/headshot.jpg" alt="Cristian Franco">		
 			</div>
-		</div><!--
-
-	--><div class="blackSection">
-			<h2><span id=workExperience></span>WORK EXPERIENCE</h2>
-			<div class="grid-container">
-				<div class="grid-item">
-					<h3>Wellington Management</h3>
-					<ul>
-						<li>Reduced an 8-hour analysis and visualization process down to 5 minutes</li>
-						<li>Established an ETL process and a Business Intelligence (BI) dashboard for quarterly financial data</li>
-						<li>Learned about the finance industry and potential KPI's</li>
-						<li>Led 2 weekly stakeholder meetings and 5 Scrum inter-team meetings</li>
-					</ul>
-				</div>
-				<div class="grid-item">
-					<h3>Thrive Scholars</h3>
-					<ul>
-						<li>Taught class of 19 college freshmen CS concepts such as conditionals, loops, functions, and data structures</li>
-						<li>Led the students in labs and provided guidance in creating Java programs</li>
-						<li>Collaborated with the professor to develop in daily lesson plans and which concepts to reinforce</li>
-						<li>Assessed students' performance based on lab scores, test scores, questions asked, and overall understanding</li>
-					</ul>
-				</div>
+			<div class="gridItem">
+				<h3 id="name">Cristian Franco</h2>
+				<a id='role'>Data Analyst in Los Angeles, CA</a>
 			</div>
-		</div><!--
-
-	--><div class="tanSection">
-			<h2><span id="projects"></span>PROJECTS</h2>
-			<div class="grid-container">
-				<div class="grid-item">
-					<h3>Twitter Location Searcher</h3>
-					<ul>
-						<li>Implemented data scraping, back end, front end, and text search components of a web application</li>
-						<li>Developed a tweet scraper and searcher based on location in a team of 3</li>
-						<li>Utilized Twitter API, Angular, Spring, Lucene</li>
-					</ul>
-				</div>
-				<div class="grid-item">
-					<h3>Shoe Shiner Simulator</h3>
-					<ul>
-						<li>C#, Unity</li>
-						<li>Developed a VR game using Unity to simulate shining shoes as a a game</li>
-						<li>Worked with a team to design and implement game mechanics and environment</li>
-					</ul>
-				</div>
-				<div class="grid-item">
-					<h3>Automated Cat Feeder</h3>
-					<ul>
-						<li>C, Python</li>
-						<li>Created a menu system; feeding on a timer; used servos and TFT LCD screen</li>
-						<li>Set development sprints, created documentation, and performed tests on individual components</li>
-						<li>Used microcontrollers, Raspberry Pi, and Arduino</li>
-					</ul>
-				</div>
-<!-- 				<div class="grid-item">
-					<h3>DnD Roller</h3>
-					<ul>
-						<li>Developed a cross platform companion application through Qt</li>
-						<li>Minimized dice rolling and referencing manuals</li>
-					</ul>
-				</div> -->
-				<div class="grid-item">
-					<h3>Temperature Reader</h3>
-					<ul>
-						<li>C++</li>
-						<li>Self-started Arduino product that calculates a room's temperature and displays it</li>
-						<li>Established delivery schedule and project budget under a self-imposed deadline</li>
-						<li>Created product specifications sheet detailing components used and their price</li>
-					</ul>
-				</div>
-			</div>
-		</div><!--
-
-	--><div class="blackSection">
-			<h2><span id="extracurriculars"></span>EXTRACURRICULARS</h2>
-
-			<div class="grid-container">
-				<div class="grid-item">
-					<h3>Society of Hispanic Professional Engineers</h3>
-					<h4>Jr. Chapter Representative</h4>
-					<ul>
-						<li>Led founding efforts of new Jr. Chapter at locak high school</li>
-						<li>Organized 20 weekly meetings at local high school with volunteers</li>
-						<li>Coordinated 2 large scale outreach events with high school staff and club volunteers</li>
-					</ul>
-				</div>
-				<div class="grid-item">
-					<h3>Thrive Scholars</h3>
-					<h4>Scholar</h4>
-					<ul>
-						<li>Paired with tech industry mentor to aid in professional and personal development</li>
-						<li>Met with industry mentor on a monthly basis, focusing on professional and personal development (academic planning, goal-setting, public speaking, industry exposure)</li>
-						<li>Undertook a 6-week summer curriculum for two summers of academic and professional development</li>
-					</ul>
-				</div>
-			</div>
-
-		</div><!--
-
-	--><div class="tanSection">
-			<h2><span id="contact"></span>CONTACT</h2>
-			<div class="contactGrid">
-				<div class="contactGridItem">
-					<div id="mapid"></div>
-				</div>
-				<div class="contactGridItem">
-					<div class="linksGrid">
-						<div class="linksGridItem wholeRowItem" id="email">
-							<p id="emailText">cristianfranco.cf@gmail.com</p>
-							<!-- <a href="mailto:cristianfranco.cf@gmail.com">Email</a> -->
-						</div>
-
-						<div class="linksGridItem">
-							<a href="https://www.linkedin.com/in/c-franco/"><img src="img/LI-In-Bug.png" alt="LinkedIn Link" id="linkedinLink"></a>
-<!-- 							<a href="https://www.linkedin.com/in/c-franco/">LinkedIn</a>  -->
-						</div>
-
-						<div class="linksGridItem">
-							<a href="https://www.github.com/cristian-franco/"><img src="img/GitHub-Mark-64px.png" alt="GitHub Link" id="githubLink"></a>
-						</div>
-
-						<div class="linksGridItem" id="resumeLink">
-							<a href="img/cristianFrancoResume.pdf">Resume</a>
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
 		</div>
 
-		<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-   crossorigin=""></script>
+		<div class="gridSection">
+			<div class="gridItem">
+				<h2 class="sectionTitle">ABOUT ME</h2>
+			</div>
+			<!-- bio needs a rewrite to be shorter --->
+			<div class="gridItem">
+					<p class="bio">Currently looking for a new Data Analyst / Data Engineering role!</p>
+					<p class="bio">My previous roles include being a Data Analyst at AmeriHome Mortgage and a Technology Intern at Wellington Management. I graduated from the University of California, Riverside's Computer Engineering program at the Bourns College of Engineering.</p>
+					<p class="bio">I'm currently learning about Airflow and implementing Streamlit and MongoDB in a new project I'm developing. I'm passionate about data processing, pipelines, visualizations, and analysis.</p>
+			</div>
+		</div><!--	
+
+	--><div class="gridSection">
+			<div class="gridItem">
+				<h2 class="sectionTitle">SKILLS</h2>
+			</div>
+			<div class="gridItem">
+				<div class="langGroup">
+					<p class="langTitle">Languages</p>
+					<p class="langText">Python, SQL, C++, C, Java<br>HTML, CSS, JavaScript<br>Pandas, Git, BitBucket, Jira, Scrum</p>
+				</div>
+				<div class="langGroup">
+					<p class="langTitle">Visualization</p>
+					<p class="langText">Tableau, Plotly</p>
+				</div>
+				<div class="langGroup">
+					<p class="langTitle">Cloud Tech</p>
+					<p class="langText">AWS: Athena, S3, Lambda</p>
+				</div>
+				<div class="langGroup">
+					<p class="langTitle">Databases</p>
+					<p class="langText">MS SQL</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="gridSection">
+			<div class="gridItem">
+				<h2 class="sectionTitle">PROJECTS</h2>
+			</div>
+			<div class="gridItem">
+				<div class='langGroup'>
+					<p class='langTitle'>Twitter Location Searcher</p>
+					<p class='langText'>Developed a tweet scraper and search based on location in a team of 3. Utilized TWitter API, Angular, Spring, Lucene</p>
+				</div>
+				<div class='langGroup'>
+					<p class='langTitle'>Shoe Shiner Simulator</p>
+					<p class='langText'>Developed a VR game using Unity to simulate shining shoes in a team of 3. C#</p>
+				</div>
+				<div class='langGroup'>
+					<p class='langTitle'>Automated Cat Feeder</p>
+					<p class='langText'>Used microcontrollers, Raspberry Pi, Arduino, C, and Python</p>
+				</div>
+				<div class='langGroup'>
+					<p class='langTitle'>Temperature Reader</p>
+					<p class='langText'>Arduino project that calculates and displays a room's temperature C++</p> 
+				</div>
+			</div>
+		</div>
+
+		<div class="gridSection">
+			<div class='gridItem'>
+				<h2 class="sectionTitle">WORK EXPERIENCE</h2>
+			</div>
+			<div class='gridItem'>
+				<div class='langGroup'>
+					<p class='langTitle'>AmeriHome Mortgage | Business Reporting & Data Analyst</p>
+					<p class='langText'>Utilized Machine Learning models to optimize engagement on company LinkedIn posts<br>Conducted market research on a monthly basis to provide insights to senior leadership<br>Established and maintained the front end for an internal reporting website<br>Analyzed 10,000 loans for 3 key metrics to search for improvements in reporting</p>
+				</div>
+				<div class='langGroup'>
+					<p class='langTitle'>Wellington Management | Technology Intern</p>
+					<p class='langText'>Reduced an 8-hour analysis and visualization process down to 5 minutes<br>Established an ETL process and a Business Intelligence (BI) dashboard for quarterly financial data</p>
+				</div>
+				<div class='langGroup'>
+					<p class='langTitle'>Thrive Scholars | Computer Science Teaching Assistant</p>
+					<p class='langText'>Taught class of 19 college freshmen CS concepts such as conditionals, loops, functions, and data structures.<br>Led the students in labs and provided guidance in creating Java programs.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class='gridSection'>
+			<div class='gridItem'>
+				<h2 class='sectionTitle'>ORGANIZATIONS</h2>
+			</div>
+			<div class='gridItem'>
+				<div class='langGroup'>
+					<p class='langTitle'>Society of Hispanic Professional Engineers | Jr. Chapter Representative</p>
+					<p class='langText'>Led founding efforts of new Jr. Chapter at local high school<br>Organized 20 weekly meetings at local high school with volunteers<br>Coordinated 2 large scale outreach events with high school staff and club volunteers</p>
+				</div>
+				<div class='langGroup'>
+					<p class='langTitle'>Thrive Scholars | Scholar</p>
+					<p class='langText'>Paired with tech industry mentor to aid in professional and personal development<br>Met with industry mentor on a monthly basis, focusing on professional and personal development (academic planning, goal-setting, public speaking, industry exposure)<br>Undertook a 6-week summer curriculum for two summers of academic and professional development</p>
+				</div>
+			</div>
+		</div>
+
 		<script src="myscript.js"></script>
 	</body>
 </html>
