--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 			<div class="gridItem">
 					<p class="bio">Currently looking for a new Data Analyst / Data Engineering role!</p>
 					<p class="bio">My previous roles include being a Data Analyst at AmeriHome Mortgage and a Technology Intern at Wellington Management. I graduated from the University of California, Riverside's Computer Engineering program at the Bourns College of Engineering.</p>
-					<p class="bio">I'm currently learning about Airflow and implementing Streamlit and MongoDB in a new project I'm developing. I'm passionate about data processing, pipelines, visualizations, and analysis.</p>
 			</div>
 		</div><!--	
 
@@ -71,8 +70,8 @@
 			</div>
 			<div class="gridItem">
 				<div class='langGroup'>
-					<p class='langTitle'>Twitter Location Searcher</p>
-					<p class='langText'>Developed a tweet scraper and search based on location in a team of 3. Utilized TWitter API, Angular, Spring, Lucene</p>
+					<p class='langTitle'><a href='https://github.com/cristian-franco/Twitter-Location-Searcher'>Twitter Location Searcher</a></p>
+					<p class='langText'>Developed a tweet scraper and search based on location in a team of 3. Utilized Twitter API, Angular, Spring, Lucene</p>
 				</div>
 				<div class='langGroup'>
 					<p class='langTitle'>Shoe Shiner Simulator</p>
@@ -81,10 +80,6 @@
 				<div class='langGroup'>
 					<p class='langTitle'>Automated Cat Feeder</p>
 					<p class='langText'>Used microcontrollers, Raspberry Pi, Arduino, C, and Python</p>
-				</div>
-				<div class='langGroup'>
-					<p class='langTitle'>Temperature Reader</p>
-					<p class='langText'>Arduino project that calculates and displays a room's temperature C++</p> 
 				</div>
 			</div>
 		</div>
@@ -95,15 +90,15 @@
 			</div>
 			<div class='gridItem'>
 				<div class='langGroup'>
-					<p class='langTitle'>AmeriHome Mortgage | Business Reporting & Data Analyst</p>
+					<p class='langTitle'><a href='https://www.amerihome.com/'>AmeriHome Mortgage</a> | Business Reporting & Data Analyst</p>
 					<p class='langText'>Utilized Machine Learning models to optimize engagement on company LinkedIn posts<br>Conducted market research on a monthly basis to provide insights to senior leadership<br>Established and maintained the front end for an internal reporting website<br>Analyzed 10,000 loans for 3 key metrics to search for improvements in reporting</p>
 				</div>
 				<div class='langGroup'>
-					<p class='langTitle'>Wellington Management | Technology Intern</p>
+					<p class='langTitle'><a href='https://www.wellington.com/en'>Wellington Management</a> | Technology Intern</p>
 					<p class='langText'>Reduced an 8-hour analysis and visualization process down to 5 minutes<br>Established an ETL process and a Business Intelligence (BI) dashboard for quarterly financial data</p>
 				</div>
 				<div class='langGroup'>
-					<p class='langTitle'>Thrive Scholars | Computer Science Teaching Assistant</p>
+					<p class='langTitle'><a href='https://www.thrivescholars.org/'>Thrive Scholars</a> | Computer Science Teaching Assistant</p>
 					<p class='langText'>Taught class of 19 college freshmen CS concepts such as conditionals, loops, functions, and data structures.<br>Led the students in labs and provided guidance in creating Java programs.</p>
 				</div>
 			</div>
@@ -115,11 +110,11 @@
 			</div>
 			<div class='gridItem'>
 				<div class='langGroup'>
-					<p class='langTitle'>Society of Hispanic Professional Engineers | Jr. Chapter Representative</p>
+					<p class='langTitle'><a href='https://shpe.org/'>Society of Hispanic Professional Engineers</a> | Jr. Chapter Representative</p>
 					<p class='langText'>Led founding efforts of new Jr. Chapter at local high school<br>Organized 20 weekly meetings at local high school with volunteers<br>Coordinated 2 large scale outreach events with high school staff and club volunteers</p>
 				</div>
 				<div class='langGroup'>
-					<p class='langTitle'>Thrive Scholars | Scholar</p>
+					<p class='langTitle'><a href='https://www.thrivescholars.org/'>Thrive Scholars</a> | Scholar</p>
 					<p class='langText'>Paired with tech industry mentor to aid in professional and personal development<br>Met with industry mentor on a monthly basis, focusing on professional and personal development (academic planning, goal-setting, public speaking, industry exposure)<br>Undertook a 6-week summer curriculum for two summers of academic and professional development</p>
 				</div>
 			</div>
