Added Clippers project link and short description

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 			</div>
 			<div class="gridItem">
 				<div class='langGroup'>
+					<p class='langTitle'><a href='https://github.com/cristian-franco/LAClippersDashboard'>Los Angeles Clippers Dashboard</a></p>
+					<p class='langText'>Created a dashboard of key basketball metrics based on the Los Angeles Clippers. Utilized Metabase, MySQL, NBA API, AWS RDS, Python</p>
+				</div>
+				<div class='langGroup'>
 					<p class='langTitle'><a href='https://github.com/cristian-franco/Twitter-Location-Searcher'>Twitter Location Searcher</a></p>
 					<p class='langText'>Developed a tweet scraper and search based on location in a team of 3. Utilized Twitter API, Angular, Spring, Lucene</p>
 				</div>
