Added navigation bar, attempted centering main grid

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
         />
     </head>
     <body>
+        <div class="navigation-bar">
+            <div>
+                <p>
+                    <a href="https://cfranco.dev/">Cristian Franco</a>
+                </p>
+            </div>
+            <div class="section-links grid-container">
+                <div class="grid-item"><p>Blog</p></div>
+                <div class="grid-item"><p>Resume</p></div>
+                <div class="grid-item"><p>Projects</p></div>
+                <div class="grid-item"><p>GitHub</p></div>
+            </div>
+        </div>
         <div class="front-page-subtext grid-container">
             <div class="grid-item">
                 <div class="front-page-picture">
@@ -22,7 +35,11 @@
                 </div>
             </div>
             <div class="grid-item">
-                <p>I am a Solutions Engineer currently working at Otter.</p>
+                <p>
+                    I am a Solutions Engineer currently working at Otter in the
+                    food tech space.<br />
+                    Open to Data Engineer and Software Engineer opportunities!
+                </p>
             </div>
             <div class="grid-item">
                 <p>
@@ -39,11 +56,9 @@
             <div class="grid-item">
                 <p>
                     I'm slowly become a big foodie as well! Feel free to drop
-                    any recommendations for Los Angeles in my inbox!
+                    any recommendations<br />
+                    for Los Angeles in my inbox!
                 </p>
-            </div>
-            <div class="grid-item">
-                <p>Feel free to reach out by email!</p>
             </div>
         </div>
     </body>
