Fixed main page subtext box centering, added links, and removed unfinished section links

--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
     </head>
     <body>
         <div class="navigation-bar">
-            <div>
+            <div class="home-button">
                 <p>
                     <a href="https://cfranco.dev/">Cristian Franco</a>
                 </p>
             </div>
             <div class="section-links grid-container">
-                <div class="grid-item"><p>Blog</p></div>
-                <div class="grid-item"><p>Resume</p></div>
-                <div class="grid-item"><p>Projects</p></div>
-                <div class="grid-item"><p>GitHub</p></div>
+                <!-- <div class="grid-item"><p>Blog</p></div> -->
+                <!-- <div class="grid-item"><p>Resume</p></div>
+                <div class="grid-item"><p>Projects</p></div> -->
+                <div class="grid-item">
+                    <p>
+                        <a href="https://github.com/cristian-franco">
+                            GitHub
+                        </a>
+                    </p>
+                </div>
             </div>
         </div>
         <div class="front-page-subtext grid-container">
