--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="grid-item">
                 <p>
-                    I'm slowly become a big foodie as well! Feel free to drop
+                    I'm slowly becoming a big foodie as well! Feel free to drop
                     any recommendations<br />
                     for Los Angeles in my inbox!
                 </p>
