Updated front page text

--- a/index.html
+++ b/index.html
@@ -42,29 +42,24 @@
             </div>
             <div class="grid-item">
                 <p>
-                    I am a Solutions Engineer currently working at Otter in the
-                    food tech space.<br />
+                    I am a Software Engineer currently working at CloudKitchens
+                    in the food tech space.<br />
                     Open to Data Engineer and Software Engineer opportunities!
                 </p>
             </div>
             <div class="grid-item">
-                <p>
-                    I have a strong interest in Data Engineering, Software
-                    Engineering, and tech in general!
-                </p>
+                <p>I have a strong interest in open source and community!</p>
             </div>
             <div class="grid-item">
                 <p>
-                    In my free time, I love to read, workout, and try out new
-                    tech!
-                </p>
-            </div>
-            <div class="grid-item">
-                <p>
-                    I'm slowly becoming a big foodie as well! Feel free to drop
-                    any recommendations<br />
+                    In my free time, I love to read, workout, and try new
+                    foods!<br />
+                    Feel free to drop any recommendations<br />
                     for Los Angeles in my inbox!
                 </p>
+            </div>
+            <div class="grid-item">
+                <p></p>
             </div>
         </div>
     </body>
